# ultragram

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: RATIONAL.md
ultragram/: __init__.py
