[tool.poetry]
name = "ultragram"
version = "0.0.1"
description = "Ultragram - is ultra fast Telegram Bot API library for development both large and scalable bots."
authors = ["prostomarkeloff"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
