[tool.poetry]
name = "ultragram"
version = "0.0.1"
description = "Ultragram - is ultra fast Telegram Bot API library for development both large and scalable bots."
authors = ["prostomarkeloff"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^1.21.0"
pytest = "^5.3.2"
pytest-asyncio = "^0.10.0"
black = "^19.10b0"
reorder-python-imports = "^1.8.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
